log
Sat 15 Oct 2022 04:17:21 PM UTC: 
 tests:  0|4
total_score: 0/70
25f880f
Sat 15 Oct 2022 05:16:39 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9e7dc34
Sat 15 Oct 2022 06:01:59 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:14: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘hearArray’; did you mean ‘heapArray’?
   24 |   return pq->hearArray[0].data;
      |              ^~~~~~~~~
      |              heapArray
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d495115
Sat 15 Oct 2022 06:02:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
25ff9cc
Sat 15 Oct 2022 06:16:19 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:33: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘hearArray’; did you mean ‘heapArray’?
   31 |     pq->heapArray = realloc(pq->hearArray, pq->capac*sizepf(heapElem));
      |                                 ^~~~~~~~~
      |                                 heapArray
heap.c:31:54: error: implicit declaration of function ‘sizepf’ [-Werror=implicit-function-declaration]
   31 |     pq->heapArray = realloc(pq->hearArray, pq->capac*sizepf(heapElem));
      |                                                      ^~~~~~
heap.c:31:61: error: expected expression before ‘heapElem’
   31 |     pq->heapArray = realloc(pq->hearArray, pq->capac*sizepf(heapElem));
      |                                                             ^~~~~~~~
heap.c:37:7: error: unused variable ‘dadSize’ [-Werror=unused-variable]
   37 |   int dadSize = (pq->size - 1)/2;
      |       ^~~~~~~
heap.c:36:7: error: unused variable ‘size’ [-Werror=unused-variable]
   36 |   int size = pq->size;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ef31416
Sat 15 Oct 2022 06:16:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:54: error: implicit declaration of function ‘sizepf’ [-Werror=implicit-function-declaration]
   31 |     pq->heapArray = realloc(pq->heapArray, pq->capac*sizepf(heapElem));
      |                                                      ^~~~~~
heap.c:31:61: error: expected expression before ‘heapElem’
   31 |     pq->heapArray = realloc(pq->heapArray, pq->capac*sizepf(heapElem));
      |                                                             ^~~~~~~~
heap.c:37:7: error: unused variable ‘dadSize’ [-Werror=unused-variable]
   37 |   int dadSize = (pq->size - 1)/2;
      |       ^~~~~~~
heap.c:36:7: error: unused variable ‘size’ [-Werror=unused-variable]
   36 |   int size = pq->size;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
d02d5b8
Sat 15 Oct 2022 06:16:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:7: error: unused variable ‘dadSize’ [-Werror=unused-variable]
   37 |   int dadSize = (pq->size - 1)/2;
      |       ^~~~~~~
heap.c:36:7: error: unused variable ‘size’ [-Werror=unused-variable]
   36 |   int size = pq->size;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
0fbe2f1
